# vespa-news-recommendation-hack-pack

./: .gitattributes  .gitignore  .gitmodules  README.md  default.env  newsData.tsv  pyproject.toml  test.json  test.py  train_impressions.csv
embeddings/: news_bert_transform.pt  news_embeddings.tsv  user_embeddings.tsv  vespa_news_embeddings.json  vespa_user_embeddings.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/api/: Types.ts  fetch.ts
frontend/src/app/: SearchWrapper.module.css  SearchWrapper.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/_components/: NewsArticleCmp.module.css  NewsArticleCmp.tsx  NewsResults.module.css  NewsResults.tsx
mind/: news_bert_transform.pt  news_embeddings.tsv  user_embeddings.tsv
mind/dev/: behaviors.tsv  entity_embedding.vec  news.tsv  news_embeddings_bert.tsv  relation_embedding.vec
mind/train/: behaviors.tsv  entity_embedding.vec  news.tsv  news_embeddings_bert.tsv
python/: feed.py  test.json  toVespa.json
src/: Dockerfile
src/application/: services.xml  test.yql
src/application/schemas/: category_ctr.sd  news.sd  user.sd
src/application/search/query-profiles/: manyHits.xml
src/application/search/query-profiles/types/: root.xml
src/python/: addNews.py  addUser.py  calculateRecommendations.py  convert_embeddings_to_vespa_format.py  createBertEmbedding.py  create_bert_embeddings.py  metrics.py  mindData.py  mind_data.py  newsData.py  train_cold_start.py  train_cold_start_wrapper.py  train_mf.py
src/sh/: download_mind.sh
