[project]
name = "newshackpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyvespa>=0.53.0",
    "numpy<2.0.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "python-dotenv>=1.0.1",
]
